# CodeCop

./: .gitignore  Cargo.toml  README.md  config.json
src/: app_config.rs  main.rs  prompts.rs
